Working ElGamal communication